--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
 name: Deploy
 run-name: Deploy ${{ inputs.git_ref_to_deploy || github.ref_name }} to ${{ inputs.environment }}
 
-concurrency:
-  group: deploy-${{ inputs.environment }}
+
 
 on:
   workflow_call:
@@ -41,14 +40,23 @@ on:
           - all
           - web
           - sidekiq
-          - none
         default: all
+
+permissions: {}
 
 env:
   git_ref_to_deploy: ${{ inputs.git_ref_to_deploy }}
   environment: ${{ inputs.environment }}
   server_types: ${{ inputs.server_types }}
+  cluster_name: mavis-${{ inputs.environment }}
+  app_version: ${{ inputs.git_ref_to_deploy == '' && 'unknown' || inputs.git_ref_to_deploy }}
   account_id: ${{ inputs.environment == 'production' && '820242920762' || '393416225559' }}
+  aws_role: ${{ inputs.environment == 'production'
+    && 'arn:aws:iam::820242920762:role/GithubDeployECSService'
+    || 'arn:aws:iam::393416225559:role/GithubDeployECSService' }}
+
+concurrency:
+  group: deploy-${{ inputs.environment }}
 
 jobs:
   validate-inputs:
@@ -63,6 +71,7 @@ jobs:
               exit 1
             fi
           fi
+
   determine-git-sha:
     runs-on: ubuntu-latest
     permissions: {}
@@ -77,6 +86,7 @@ jobs:
       - name: Get git sha
         id: get-git-sha
         run: echo "git-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+
   build-and-push-image:
     permissions:
       id-token: write
@@ -84,76 +94,142 @@ jobs:
     uses: ./.github/workflows/build-and-push-image.yml
     with:
       git_sha: ${{ needs.determine-git-sha.outputs.git-sha }}
-  validate-permissions:
-    needs: validate-inputs
+
+  prepare-deployment:
+    name: Prepare deployment
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./terraform
+    needs: [determine-git-sha, build-and-push-image]
     permissions:
       id-token: write
+    strategy:
+      fail-fast: true
+      matrix:
+        service: ${{ inputs.server_types == 'all' && fromJSON('["web", "sidekiq"]') || fromJSON(format('["{0}"]', inputs.server_types)) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
+        id: checkout-code
         with:
-          ref: ${{ github.ref_name }}
+          ref: ${{ needs.determine-git-sha.outputs.git-sha }}
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v5
         with:
-          role-to-assume: arn:aws:iam::${{ env.account_id }}:role/GithubDeployMavisAndInfrastructure
+          role-to-assume: ${{ env.aws_role }}
           aws-region: eu-west-2
-      - name: Compare permissions
-        id: compare-permissions
+      - name: Get image digest
+        id: get-image-digest
+        env:
+          image_tag: ${{ needs.determine-git-sha.outputs.git-sha }}
         run: |
-          source ./scripts/validate-github-actions-policy.sh
-          validate_policies "arn:aws:iam::$account_id:policy/DeployMavisResources" ./account/resources/iam_policy_DeployMavisResources.json
-          exit $?
-  update-permissions:
+          digest=$(aws ecr describe-images \
+            --repository-name mavis/webapp \
+            --image-ids imageTag=$image_tag \
+            --query 'imageDetails[0].imageDigest' \
+            --output text)
+          echo "digest=$digest" >> $GITHUB_OUTPUT
+      - name: Populate task definition
+        id: create-task-definition
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition-family: "mavis-${{ matrix.service }}-task-definition-${{ inputs.environment }}-template"
+          container-name: "application"
+          image: "${{ env.account_id }}.dkr.ecr.eu-west-2.amazonaws.com/mavis/webapp@${{ steps.get-image-digest.outputs.digest }}"
+          environment-variables: |
+            APP_VERSION=app-version
+      - name: Rename task definition file
+        run: mv ${{ steps.create-task-definition.outputs.task-definition }} ${{ runner.temp }}/${{ matrix.service }}-task-definition.json
+      - name: Upload artifact for ${{ matrix.service }} task definition
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ inputs.environment }}-${{ matrix.service }}-task-definition
+          path: ${{ runner.temp }}/${{ matrix.service }}-task-definition.json
+
+  approve-deployments:
+    name: Wait for approval if required
     runs-on: ubuntu-latest
-    needs: validate-permissions
-    if: ${{ !cancelled() && (inputs.environment == 'production' || inputs.environment == 'preview') && needs.validate-permissions.result == 'failure' }}
+    needs: prepare-deployment
     environment: ${{ inputs.environment }}
-    defaults:
-      run:
-        working-directory: ./terraform
+    steps:
+      - run: echo "Proceeding with deployment to $environment environment"
+
+  deploy-web:
+    name: Deploy web service
+    runs-on: ubuntu-latest
+    if: ${{ inputs.server_types == 'web' || inputs.server_types == 'all' }}
+    needs: [prepare-deployment, approve-deployments]
+    concurrency: deploy-web-${{ inputs.environment }}
     permissions:
       id-token: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-        with:
-          ref: ${{ github.ref_name }}
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v5
         with:
-          role-to-assume: arn:aws:iam::${{ env.account_id }}:role/GithubDeployMavisAndInfrastructure
+          role-to-assume: ${{ env.aws_role }}
           aws-region: eu-west-2
-      - name: Update IAM policy
-        run: ./scripts/update-github-actions-policy.sh "arn:aws:iam::$account_id:policy/DeployMavisResources" ./account/resources/iam_policy_DeployMavisResources.json
-  deploy-infrastructure:
+      - name: Checkout code
+        uses: actions/checkout@v5
+      - name: Download web task definition artifact
+        uses: actions/download-artifact@v5
+        with:
+          path: ${{ runner.temp }}
+          name: ${{ inputs.environment }}-web-task-definition
+      - name: Change family of task definition
+        run: |
+          file_path="${{ runner.temp }}/web-task-definition.json"
+          family_name="mavis-web-task-definition-$environment"
+          echo "$(jq --arg f "$family_name" '.family = $f' "$file_path")" > "$file_path"
+      - name: Register web task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+        with:
+          task-definition: ${{ runner.temp }}/web-task-definition.json
+      - name: Create appspec.yml
+        run: |
+          cp config/templates/appspec.yaml.tpl appspec.yaml
+          sed -i "s#TASK_DEFINITION_ARN#${{ steps.register-task-definition.outputs.task-definition-arn }}#g" appspec.yaml
+      - name: Deploy web service with CodeDeploy
+        id: deploy-web-service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+        with:
+          task-definition: ${{ runner.temp }}/web-task-definition.json
+          cluster: ${{ env.cluster_name }}
+          service: mavis-${{ inputs.environment }}-web
+          codedeploy-application: mavis-${{ inputs.environment }}
+          codedeploy-deployment-group: blue-green-group-${{ inputs.environment }}
+      - name: Wait for deployment to complete
+        run: |
+          echo "Waiting for CodeDeploy deployment ${{ steps.deploy-web-service.outputs.codedeploy-deployment-id }} to complete..."
+          aws deploy wait deployment-successful --deployment-id "${{ steps.deploy-web-service.outputs.codedeploy-deployment-id }}"
+          echo "Deployment successful"
+
+  deploy-sidekiq:
+    name: Deploy sidekiq service
+    runs-on: ubuntu-latest
+    if: ${{ inputs.server_types == 'sidekiq' || inputs.server_types == 'all' }}
+    needs: [prepare-deployment, approve-deployments]
+    concurrency: deploy-sidekiq-${{ inputs.environment }}
     permissions:
       id-token: write
-    needs:
-      [
-        build-and-push-image,
-        determine-git-sha,
-        validate-permissions,
-        update-permissions,
-      ]
-    if: ${{ !cancelled() &&
-      ((inputs.environment != 'production' && inputs.environment != 'preview') ||
-      needs.validate-permissions.result == 'success' || needs.update-permissions.result == 'success') }}
-    uses: ./.github/workflows/deploy-infrastructure.yml
-    with:
-      environment: ${{ inputs.environment }}
-      git_ref_to_deploy: ${{ inputs.git_ref_to_deploy || github.ref_name }}
-  deploy-application:
-    permissions:
-      id-token: write
-    needs: [deploy-infrastructure, determine-git-sha]
-    if: ${{ !cancelled() && inputs.server_types != 'none' && needs.deploy-infrastructure.result == 'success' }}
-    uses: ./.github/workflows/deploy-application.yml
-    with:
-      environment: ${{ inputs.environment }}
-      server_types: ${{ inputs.server_types }}
-      git_ref_to_deploy: ${{ inputs.git_ref_to_deploy || github.ref_name }}
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v5
+        with:
+          role-to-assume: ${{ env.aws_role }}
+          aws-region: eu-west-2
+      - name: Download sidekiq task definition artifact
+        uses: actions/download-artifact@v5
+        with:
+          path: ${{ runner.temp }}
+          name: ${{ inputs.environment }}-sidekiq-task-definition
+      - name: Change family of task definition
+        run: |
+          file_path="${{ runner.temp }}/sidekiq-task-definition.json"
+          family_name="mavis-sidekiq-task-definition-$environment"
+          echo "$(jq --arg f "$family_name" '.family = $f' "$file_path")" > "$file_path"
+      - name: Deploy sidekiq service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+        with:
+          task-definition: ${{ runner.temp }}/sidekiq-task-definition.json
+          cluster: ${{ env.cluster_name }}
+          service: mavis-${{ inputs.environment }}-sidekiq
+          force-new-deployment: true
+          wait-for-service-stability: true
