--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -81,3 +81,6 @@ Style/NumericLiterals:
 Rails/ApplicationController:
   Exclude:
     - app/controllers/errors_controller.rb
+
+Naming/ClassAndModuleCamelCase:
+  AllowedNames: [ActiveRecord_Relation]
