Split `immunisations_api` queue
By splitting the `immunisations_api` queue into
`immunisations_api_search` and `immunisations_api_sync`, we can ensure
that all `sync` jobs are given priority over `search` jobs. This is
important to ensure that `sync` jobs don't get stuck at the back of a
huge queue of `search` jobs.

It's worth noting that we initially intended to prioritise the daily, 
session-based search over the monthly, catch-up-based search using the
same queueing mechanism. That said, this is non-trivial because they
use the same job. Instead we already make sure that the daily searches
are queued before the monthly searches. My understanding is that Sidekiq
picks jobs up on a FIFO basis, which should be a strict enough
prioritisation for now.

Jira-Issue: MAV-2350

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -8,7 +8,8 @@
   - patients
   - triages
   - pds
-  - immunisations_api
+  - immunisations_api_sync
+  - immunisations_api_search
   - default
 :scheduler:
   :schedule:
