--- a/config/feature_flags.yml
+++ b/config/feature_flags.yml
@@ -18,6 +18,10 @@ import_low_pds_match_rate: Prevent processing uploads with a low pds match rate.
 
 import_search_pds: Perform PDS lookups as part of the patient import processing.
 
+import_concurrency_per_server: |
+  Controls whether to limit the concurrency of the import jobs to be global or
+  to be per-server.
+
 ops_tools: Enable the operational support tools; timeline and graph.
 
 pds_cascading_search: Enable cascading PDS searches for patients without an NHS number.
