Add type enum field to Team model
And update onboarding code to match.

--- a/spec/fixtures/files/onboarding/valid.yaml
+++ b/spec/fixtures/files/onboarding/valid.yaml
@@ -9,6 +9,7 @@ team:
   careplus_venue_code: EXAMPLE
   privacy_notice_url: https://example.com/privacy-notice
   privacy_policy_url: https://example.com/privacy-policy
+  type: 0
   workgroup: nhstrust
 
 programmes: [hpv]
