Allow Devise timeout to be set in Settings

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -53,3 +53,7 @@ reporting_api:
     root_url: http://manage-vaccinations-in-schools.nhs.uk/reporting/
     client_id: <%= Rails.application.credentials.reporting_api&.client_id %>
     secret: <%= Rails.application.credentials.reporting_api&.secret %>
+
+# Set a value to override the default values set in config/initializers/devise.rb
+devise:
+  timeout_in_seconds:
