Rename MMR programme to MMRV
This renames the MMR programme internally to MMRV but doesn't change any
user facing pieces of content for now.

We know that the MMR programme is eventually going to be replaced by
MMRV, but there will be a period of time where both MMR and MMRV
vaccines are given to children. We've decided this will be the same
programme, so this rename to `mmrv` just helps to prepare for the
future and to avoid needing to migrate data in production later.

--- a/config/vaccines.yml
+++ b/config/vaccines.yml
@@ -135,7 +135,7 @@ nimenrix:
 # MMR
 
 priorix:
-  type: mmr
+  type: mmrv
   brand: Priorix
   method: injection
   manufacturer: GlaxoSmithKline
@@ -148,7 +148,7 @@ priorix:
     0.5ml pre-filled syringes (GlaxoSmithKline UK Ltd) (product)
 
 vaxpro:
-  type: mmr
+  type: mmrv
   brand: MMR VaxPro
   method: injection
   manufacturer: Merck Sharp & Dohme
