Add parallel_tests gem for faster test execution
Enables parallel test execution across multiple CPU cores, significantly
reducing test suite runtime.

Benchmark (M3 MacBook, 8 cores):
- Before: 14 minutes
- After: 6 minutes
- Improvement: 57% faster

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   database: manage_vaccinations_development
 test:
   <<: *default
-  database: manage_vaccinations_test
+  database: manage_vaccinations_test<%= ENV['TEST_ENV_NUMBER'] %>
 staging:
   <<: *default
   database: manage_vaccinations_staging
